# ArkWorks-Groth16-Sudoku

./: Cargo.toml  README.md  sudoku_gen.py
src/: alloc.rs  constraint.rs  main.rs
